--- a/department_team.html
+++ b/department_team.html
@@ -85,7 +85,7 @@
       <div class="faculty-card">
         <img src="images/department-team/ulhas-s-sonawane.jpg" alt="U.S.Sonvane" class="faculty-img">
         <h3><b>Ulhas.S.Sonawane</b></h3>
-        <p><b>Specialization : ---</b></p>
+        <p><b>Specialization : Analog and Digital Electronics, Communication, Material Science</b></p>
 
         <p>Lecturer</p>
         <p>Subject Taught: Electronic</p>
