--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </div>
     <div class="hod-info">
       <h2>Dr. Ishwar J. Patil</h2>
-      <h4><b>Principle</b></h4>
+      <h3><b><u>Principle</u></b></h3>
       <p>
       Dear Students,
 
@@ -120,19 +120,17 @@ Best wishes for your academic success!
 <section class="hod-section">
   <div class="hod-container">
     <div class="hod-img">
-      <img src="images/head-of-department.jpg" alt="HOD Image" />
+      <img src="images/department-team/ulhas-s-sonawane.jpg" alt="HOD Image" />
     </div>
     <div class="hod-info">
-      <h2>Anis.M.Kureshi</h2>
-      <h4>Head of Department</h4>
+      <h2>Ulhas.S.Sonawane</h2>
+      <h3><u><b>Vice Principal</b></u></h3>
       <p>
-        Dear Students,
-
-Welcome to the Department of Computer Science at <b> Shahada Taluka Educational Society and Co-Op. Educational Society’s Ltd. </b> As Head of the Department, I,Prof. Anis M. Kureshi , feel honored to lead a department committed to academic excellence, practical learning, and student empowerment. Our mission is to provide high-quality education that equips young women with technical skills, creativity, and strong values. We encourage you to engage fully in both academics and co-curricular activities. Let’s work together to shape a successful and meaningful future.
-
+       Dear Students,
+Welcome to the Department of Computer Science at <b>Shahada Taluka Educational Society and Co-Op. Educational Society’s Ltd.</b> As Vice Principal, I, Prof. Ulhas S. Sonawane, feel honored to lead a department committed to academic excellence, practical learning, and student empowerment.
+Our mission is to provide high-quality education that equips young women with technical skills, creativity, and strong values. We encourage you to engage fully in both academics and co-curricular activities. Let’s work together to shape a successful and meaningful future.
 Wishing you all the best on your educational journey!
-
-<b>— Prof. Anis M. Kureshi</b>
+<b>— Prof. Ulhas S. Sonawane</b>
       </p>
     </div>
   </div>
