update code index.html and department_team.htmk

--- a/department_team.html
+++ b/department_team.html
@@ -72,19 +72,13 @@
       </div>
       <br>
       <br>
-      <!-- Card 2 -->
-      <div class="faculty-card">
-        <img src="images/department-team/Teacher 1.jpeg" alt="S.M.Patil" class="faculty-img">
-        <h3><b>Sonali.M.Patil</b></h3>
-        <p><b>Specialization : M.Sc Computer Science</b></p>
-        <p> Lecturer</p>
-        <p>Subject Taught: Python</p>
-      </div>
+      
 
       <!-- Card 3 -->
       <div class="faculty-card">
         <img src="images/department-team/ulhas-s-sonawane.jpg" alt="U.S.Sonvane" class="faculty-img">
         <h3><b>Ulhas.S.Sonawane</b></h3>
+        <p><b><u>Vice Principal</u></b></p>
         <p><b>Specialization : Analog and Digital Electronics, Communication, Material Science</b></p>
 
         <p>Lecturer</p>
@@ -93,13 +87,20 @@
 
       <!-- Card 4 -->
       <div class="faculty-card">
-        <img src="images/department-team/manoj-d-salve.png" alt="---------" class="faculty-img">
+        <img src="images/department-team/manoj-d-salve.png" alt="manoj-d-salve" class="faculty-img">
         <h3><b>Manoj.D.Salve</b></h3>
         <p><b>Specialization : M.Sc Computer Science</b></p>
         <p>Lecturer</p>
         <p>Subject Taught: Software Engineering</p>
       </div>
-
+<!-- Card 2 -->
+      <div class="faculty-card">
+        <img src="images/department-team/Teacher 1.jpeg" alt="S.M.Patil" class="faculty-img">
+        <h3><b>Sonali.M.Patil</b></h3>
+        <p><b>Specialization : M.Sc Computer Science</b></p>
+        <p> Lecturer</p>
+        <p>Subject Taught: Python</p>
+      </div>
       <!-- Card 5 -->
       <div class="faculty-card">
         <img src="images/department-team/Teacher 2.jpeg" alt="P.A.Mali" class="faculty-img">
