--- a/index.html
+++ b/index.html
@@ -1,186 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>B.Sc. Computer Department</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
-<!-- Header Top -->
-<div class="header-top">
-  <img src="images/logo.png" alt="College Logo" class="logo-left" />
+  <div class="header-top">
+    <img src="images/logo.png" alt="College Logo" class="logo-left" />
 
-  <div class="header-texts">
-    <h2 class="college-name">Shahada Taluka Educational Society and Co-Op. Educational Society’s Ltd.</h2>
-    <h1 class="dept-title-left">B.Sc. Computer Science Department</h1>
+    <div class="header-texts">
+      <h2 class="college-name">Shahada Taluka Educational Society and Co-Op. Educational Society’s Ltd.</h2>
+      <h1 class="dept-title-left">B.Sc. Computer Science Department</h1>
+    </div>
+
+    <div class="header-controls">
+      <div id="date-time" class="date-time-3d">Loading time...</div>
+    </div>
   </div>
 
-  <div class="header-controls">
-    <div id="date-time" class="date-time-3d">Loading time...</div>
-  </div>
-</div>
+  <header class="navbar-section">
+    <nav class="nav">
 
+      <ul class="nav-list">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="courses.html">Courses</a></li>
+        <li><a href="department_team.html">Department Team</a></li>
 
+        <li class="dropdown">
+          <a href="#" id="lab-toggle">Lab</a>
+          <ul class="dropdown-menu" id="lab-menu">
+            <li><a href="labs.html">Lab Information</a></li>
+            <li><a href="lab_gallery.html">Lab Gallery</a></li>
+          </ul>
+        </li>
 
-<!-- Navbar Section -->
-<header class="navbar-section">
-  <nav class="nav">
-    
-    <ul class="nav-list">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="courses.html">Courses</a></li>
-       <li><a href="department_team.html">Department Team</a></li>
+        <li class="dropdown">
+          <a href="#" id="downloads-toggle">Student</a>
+          <ul class="dropdown-menu" id="downloads-menu">
+            <li><a href="syllabus.html">Syllabus</a></li>
+            <li><a href="timetable.html">Timetable</a></li>
+            <li><a href="student-corner.html">Student Corner</a></li>
+          </ul>
+        </li>
+        <li><a href="contact.html">Contact Us</a></li>
+      </ul>
+    </nav>
+  </header>
 
-        <!-- Lab with Dropdown -->
-     <li class="dropdown">
-  <a href="#" id="lab-toggle">Lab</a>
-  <ul class="dropdown-menu" id="lab-menu">
-    <li><a href="labs.html">Lab Information</a></li>
-    <li><a href="lab_gallery.html">Lab Gallery</a></li>
-  </ul>
-</li>
-      <!-- Downloads with Dropdown -->
-     <li class="dropdown">
-  <a href="#" id="downloads-toggle">Student</a>
-  <ul class="dropdown-menu" id="downloads-menu">
-    <li><a href="syllabus.html">Syllabus</a></li>
-    <li><a href="timetable.html">Timetable</a></li>
-    <li><a href="student-corner.html">Student Corner</a></li>
-  </ul>
-</li>
-
-
-
-      <li><a href="contact.html">Contact Us</a></li>
-    </ul>
-  </nav>
-</header>
-
-
-
-
-  <!-- College Image Slider -->
   <div class="slider-wrapper">
     <button class="slider-btn prev" onclick="changeSlide(-1)">&#10094;</button>
     <img src="images/college.jpg" alt="College Image" class="slider-image" id="slide-img">
     <button class="slider-btn next" onclick="changeSlide(1)">&#10095;</button>
   </div>
 
-
-<!-- Founder Section -->
-<section class="founder-section">
-  <div class="founder-container">
-    <div class="founder-image">
-      <img src="images/founder.jpg" alt="Founder Image" />
+  <section class="founder-section">
+    <div class="founder-container">
+      <div class="founder-image">
+        <img src="images/founder.jpg" alt="Founder Image" />
+      </div>
+      <div class="founder-text">
+        <h2>Founder </h2>
+        <p>
+         <b> Dear Friends / Stakeholders,</b><br>
+          On behalf of the managing committee of S.T. Co-op Educational Society Ltd., Science Sr. College, Shahada I
+          extend a hearty welcome to you on this beautiful, sacred campus & to our website as well. This campus of
+          higher learning is famous as <strong>"Vishram Kaka Shaikshanik Sankul"</strong>. The city Shahada is situated
+          close to the ‘Satpuda’ mountain ranges & valley of Tapi river. Young friends, I am in no doubt that the
+          ambience of this campus will fulfill your long cherished dream of acquiring excellence in the field of higher
+          education.
+        </p>
+        <p class="founder-name">
+          <strong>Vanashree. Motilal F. Patil</strong><br />
+          Founder,<br />
+          SHAHADA TALUKA CO-OPERATIVE EDUCATION SOCIETY'S LTD.<br />
+          SCIENCE SENIOR COLLEGE, SHAHADA DIST NANDURBAR
+        </p>
+      </div>
     </div>
-    <div class="founder-text">
-      <h2>Founder </h2>
-      <p>
-        Dear Friends / Stakeholders,<br /><br />
-        On behalf of the managing committee of S.T. Co-op Educational Society Ltd., Science Sr. College, Shahada I extend a hearty welcome to you on this beautiful, sacred campus & to our website as well. This campus of higher learning is famous as <strong>"Vishram Kaka Shaikshanik Sankul"</strong>. The city Shahada is situated close to the ‘Satpuda’ mountain ranges & valley of Tapi river. Young friends, I am in no doubt that the ambience of this campus will fulfill your long cherished dream of acquiring excellence in the field of higher education.
-      </p>
-      <p class="founder-name">
-        <strong>Vanashree. Motilal F. Patil</strong><br />
-        Founder,<br />
-        SHAHADA TALUKA CO-OPERATIVE EDUCATION SOCIETY'S LTD.<br />
-        SCIENCE SENIOR COLLEGE, SHAHADA DIST NANDURBAR
-      </p>
+  </section>
+
+  <section class="Principal">
+    <div class="hod-container">
+      <div class="hod-img">
+        <img src="images/Principle.png" alt="Principle Image" />
+      </div>
+      <div class="hod-info">
+        <h2>Dr. Ishwar J. Patil</h2>
+        <h3><b><u>Principle</u></b></h3>
+        <p>
+          <br>
+          Dear Students,
+
+          Welcome to Senior Arts Mahila Mahavidyalaya, Shahada. On behalf of our institution and the Shahada Taluka
+          Co-operative Education Society, I extend my heartfelt greetings to you all.
+
+          Our college has always aimed to provide quality education to aspiring and deserving students. With the
+          guidance of our dedicated staff and the vision of our respected Tatyasaheb, we are committed to empowering
+          women through modern education.
+
+          Join us with confidence—your journey here will help shape a bright future and make a mark in the history of
+          Shahada.
+
+          Best wishes for your academic success!
+          <b>— Dr. Ishwar J. Patil, Principal</b>
+        </p>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<!-- Principle Section -->
-<section class="Principal">
-  <div class="hod-container">
-    <div class="hod-img">
-      <img src="images/Principle.png" alt="Principle Image" />
+  <section class="hod-section">
+    <div class="hod-container">
+      <div class="hod-img">
+        <img src="images/department-team/ulhas-s-sonawane.jpg" alt="HOD Image" />
+      </div>
+      <div class="hod-info">
+        <h2>Ulhas.S.Sonawane</h2>
+        <h3><u><b>Vice Principal</b></u></h3>
+        <p>
+          <br>
+          Dear Students,
+          Welcome to the Department of Computer Science at <b>Shahada Taluka Educational Society and Co-Op. Educational
+            Society’s Ltd.</b> As Vice Principal, I, Prof. Ulhas S. Sonawane, feel honored to lead a department
+          committed to academic excellence, practical learning, and student empowerment.
+          Our mission is to provide high-quality education that equips young women with technical skills, creativity,
+          and strong values. We encourage you to engage fully in both academics and co-curricular activities. Let’s work
+          together to shape a successful and meaningful future.
+          Wishing you all the best on your educational journey!
+          <b>— Prof. Ulhas S. Sonawane</b>
+        </p>
+      </div>
     </div>
-    <div class="hod-info">
-      <h2>Dr. Ishwar J. Patil</h2>
-      <h3><b><u>Principle</u></b></h3>
-      <p>
-      Dear Students,
+  </section>
 
-Welcome to Senior Arts Mahila Mahavidyalaya, Shahada. On behalf of our institution and the Shahada Taluka Co-operative Education Society, I extend my heartfelt greetings to you all.
+  <footer class="footer">
+    <div class="footer-container">
 
-Our college has always aimed to provide quality education to aspiring and deserving students. With the guidance of our dedicated staff and the vision of our respected Tatyasaheb, we are committed to empowering women through modern education.
+      <div class="footer-column">
+        <h3>About</h3>
+        <p>
+          According to rule of NMU Jalgoan the college has started from 10th July 2001 from accademic year 2001-2002,
+          with computer science and from the academic year 2004-2005 we have enhanced our tries and got the success to
+          start the latest and most useful field - Biotechnology
+        </p>
+      </div>
 
-Join us with confidence—your journey here will help shape a bright future and make a mark in the history of Shahada.
+      <div class="footer-column">
+        <h3>Contact Us</h3>
+        <p>
+          Science Sr. College, Shahada<br>
+          Dist. Nandurbar, Maharashtra<br>
+          Email: info@stcollege.aDr. Vishram Kaka educational campus science sr. college shahada
+          Dist. Nandurbar, Maharashtra 425409
+          +91 8788356600
+          02565- 223122
+          stcopscience@gmail.comc.in<br>
+          Phone: +91-1234567890
+        </p>
+      </div>
 
-Best wishes for your academic success!
-<b>— Dr. Ishwar J. Patil, Principal</b>
-      </p>
-    </div>
-  </div>
-</section>
+      <div class="footer-column">
+        <h3>Quick Links</h3>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Courses</a></li>
+          <li><a href="#">Faculty</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
 
-<!-- HOD Section -->
-<section class="hod-section">
-  <div class="hod-container">
-    <div class="hod-img">
-      <img src="images/department-team/ulhas-s-sonawane.jpg" alt="HOD Image" />
-    </div>
-    <div class="hod-info">
-      <h2>Ulhas.S.Sonawane</h2>
-      <h3><u><b>Vice Principal</b></u></h3>
-      <p>
-       Dear Students,
-Welcome to the Department of Computer Science at <b>Shahada Taluka Educational Society and Co-Op. Educational Society’s Ltd.</b> As Vice Principal, I, Prof. Ulhas S. Sonawane, feel honored to lead a department committed to academic excellence, practical learning, and student empowerment.
-Our mission is to provide high-quality education that equips young women with technical skills, creativity, and strong values. We encourage you to engage fully in both academics and co-curricular activities. Let’s work together to shape a successful and meaningful future.
-Wishing you all the best on your educational journey!
-<b>— Prof. Ulhas S. Sonawane</b>
-      </p>
-    </div>
-  </div>
-</section>
-<!-- Footer -->
-<footer class="footer">
-  <div class="footer-container">
-
-    <!-- About Section -->
-    <div class="footer-column">
-      <h3>About</h3>
-      <p>
-        According to rule of NMU Jalgoan the college has started from 10th July 2001 from accademic year 2001-2002, with computer science and from the academic year 2004-2005 we have enhanced our tries and got the success to start the latest and most useful field - Biotechnology
-      </p>
-    </div>
-
-    <!-- Contact Section -->
-    <div class="footer-column">
-      <h3>Contact Us</h3>
-      <p>
-        Science Sr. College, Shahada<br>
-        Dist. Nandurbar, Maharashtra<br>
-        Email: info@stcollege.aDr. Vishram Kaka educational campus science sr. college shahada
-Dist. Nandurbar, Maharashtra 425409
-+91 8788356600
-02565- 223122
-stcopscience@gmail.comc.in<br>
-        Phone: +91-1234567890
-      </p>
-    </div>
-
-    <!-- Quick Links -->
-    <div class="footer-column">
-      <h3>Quick Links</h3>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Courses</a></li>
-        <li><a href="#">Faculty</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
     </div>
 
-  </div>
-
-  <div class="footer-bottom">
-    <p>&copy; 2025 B.Sc. Computer Science Department. [ Create by Premkumar Patil ❤ ]</p>
-  </div>
-</footer>
+    <div class="footer-bottom">
+      <p>&copy; 2025 B.Sc. Computer Science Department. [ Create by Premkumar Patil ❤ ]</p>
+    </div>
+  </footer>
 
 
   <script src="script.js"></script>
 </body>
+
 </html>
