--- a/syllabus.html
+++ b/syllabus.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="bg-gray-100">
-  <!-- Header Top -->
+
 <div class="header-top">
   <img src="images/logo.png" alt="College Logo" class="logo-left" />
 
@@ -23,16 +23,13 @@
   </div>
 </div>
 
-
-
-<!-- Navbar Section -->
 <header class="navbar-section">
   <nav class="nav">
     <ul class="nav-list">
       <li><a href="index.html">Home</a></li>
       <li><a href="courses.html">Courses</a></li>
       <li><a href="department_team.html">Department Team</a></li>
-<!-- Lab with Dropdown -->
+
      <li class="dropdown">
   <a href="#" id="lab-toggle">Lab</a>
   <ul class="dropdown-menu" id="lab-menu">
@@ -40,7 +37,7 @@
     <li><a href="lab_gallery.html">Lab Gallery</a></li>
   </ul>
 </li>
-      <!-- Downloads with Dropdown -->
+      
      <li class="dropdown">
   <a href="#" id="downloads-toggle">Student</a>
   <ul class="dropdown-menu" id="downloads-menu">
@@ -49,8 +46,6 @@
     <li><a href="student-corner.html">Student Corner</a></li>
   </ul>
 </li>
-
-
 
       <li><a href="contact.html">Contact Us</a></li>
     </ul>
@@ -63,8 +58,7 @@
   <section class="p-6 max-w-7xl mx-auto">
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
 
-      <!-- Repeat this card for each subject -->
-      <!-- FY B.Sc Computer -->
+      <!----> FY B.Sc Computer -->
        <br>
        <h2 class="section-title">B.Sc. Computer Science</h2>
         <br>
@@ -144,7 +138,7 @@
             <li>Lab on Computer Adide Graphic </li>
             <li>Lab on Java programming - I</li>
             <li>NSS/Sport</li>
-    <!-- Replace with actual subjects when available -->
+   
   </ul>
   <a href="Syllabus/TY.B.Sc Syllabus.pdf" target="_blank" class="text-purple-700 hover:underline">View Syllabus PDF</a>
 </div>
@@ -217,16 +211,12 @@
   </ul>
   <a href="Syllabus/SY M.Sc Syllabus.pdf" target="_blank" class="text-pink-700 hover:underline">View Syllabus PDF</a>
 </div>
-
-
-     
-    </div>
+  </div>
   </section>
-  <!-- Footer -->
+  
 <footer class="footer">
   <div class="footer-container">
 
-    <!-- About Section -->
     <div class="footer-column">
       <h3>About</h3>
       <p>
@@ -234,7 +224,6 @@
       </p>
     </div>
 
-    <!-- Contact Section -->
     <div class="footer-column">
       <h3>Contact Us</h3>
       <p>
@@ -249,7 +238,6 @@ stcopscience@gmail.comc.in<br>
       </p>
     </div>
 
-    <!-- Quick Links -->
     <div class="footer-column">
       <h3>Quick Links</h3>
       <ul>
