--- a/department_team.html
+++ b/department_team.html
@@ -57,86 +57,96 @@
   <section class="faculty-section">
     <h2 class="section-title">Department Team</h2>
     <div class="faculty-container">
-      <br>
-
-      <div class="faculty-card">
-        <img src="images/head-of-department.jpg" alt="A.M.k" class="faculty-img">
-        <h3><b>Anis.M.Kureshi</b></h3>
-        <p><b>Head of Department</b></p>
-        <p><b>Specialization : M.Sc Computer Science</b></p>
-        <p> Lecturer</p>
-        <p>Subject Taught: Database Management </p>
-      </div>
-      <br>
-      <br>
 
       <div class="faculty-card">
         <img src="images/department-team/ulhas-s-sonawane.jpg" alt="U.S.Sonvane" class="faculty-img">
         <h3><b>Ulhas.S.Sonawane</b></h3>
-        <p><b><u>Vice Principal</u></b></p>
-        <p><b>Specialization : Analog and Digital Electronics, Communication, Material Science</b></p>
-
-        <p>Lecturer</p>
-        <p>Subject Taught: Electronic</p>
+        <p><b><u>Vice Principal & HOD</u></b></p>
+        <p><b>Department : </b> Electronics</p>
+        <p><b>Qualification :</b> Analog and Digital Electronics, Communication, Material Science</p>
+        <p><b>Experience :</b> ---</p>
       </div>
 
       <div class="faculty-card">
-        <img src="images/department-team/manoj-d-salve.png" alt="manoj-d-salve" class="faculty-img">
-        <h3><b>Manoj.D.Salve</b></h3>
-        <p><b>Specialization : M.Sc Computer Science</b></p>
-        <p>Lecturer</p>
-        <p>Subject Taught: Software Engineering</p>
+        <img src="images/head-of-department.jpg" alt="A.M.k" class="faculty-img">
+        <h3><b>Anis.M.Kureshi</b></h3>
+        <p><b>HOD</b></p>
+        <p><b>Department : </b>Computer Science</p>
+        <p> <b>Qualification : </b>M.Sc,SET,N,Phil., Ph.D (appert)</p>
+        <p><b>Experience :</b> 14 year</p>
       </div>
 
       <div class="faculty-card">
-        <img src="images/department-team/Teacher 1.jpeg" alt="S.M.Patil" class="faculty-img">
-        <h3><b>Sonali.M.Patil</b></h3>
-        <p><b>Specialization : M.Sc Computer Science</b></p>
-        <p> Lecturer</p>
-        <p>Subject Taught: Python</p>
-      </div>
-
-      <div class="faculty-card">
-        <img src="images/department-team/Teacher 2.jpeg" alt="P.A.Mali" class="faculty-img">
-        <h3>Pallavi.A.Mali</h3>
-        <p><b>Specialization : M.Sc Computer Science</b></p>
-        <p>Lecturer</p>
-        <p>Subject Taught: Java Programming</p>
-      </div>
-
-
-      <div class="faculty-card">
-        <img src="images/department-team/Teacher 3.jpeg" alt="R.R.Chaudhari" class="faculty-img">
-        <h3>Rushika.R.Chaudhari</h3>
-        <p><b>Specialization : M.Sc Computer Science</b></p>
-        <p>Lecturer</p>
-        <p>Subject Taught: System Programming</p>
-      </div>
-
-      <div class="faculty-card">
-        <img src="images/department-team/Teacher 4.png" alt="N.T.Patil" class="faculty-img">
-        <h3><b>Neha.T.Patil</b></h3>
-        <p><b>Specialization : M.Sc Computer Science</b></p>
-        <p>Lecturer</p>
-        <p>Subject Taught: Computer Adide Grapic</p>
+        <img src="images/hod.jpg" alt="----" class="faculty-img">
+        <h3><b>----</b></h3>
+        <p><b><u>HOD</u></b></p>
+        <p><b>Department :</b> Physics</p>
+        <p><b>Qualification :</b> --</p>
+        <p><b>Experience : </b>--</p>
       </div>
 
       <div class="faculty-card">
         <img src="images/department-team/Teacher 5.png" alt="Y.D.Patil" class="faculty-img">
         <h3><b>Yugandhara.D.Patil</b></h3>
-        <p><b>Specialization : M.Sc Mathematics</b></p>
-        <p>Lecturer</p>
-        <p>Subject Taught: Mathematics</p>
+        <p><b>HOD</b></p>
+        <p><b>Department :</b> Mathematics</p>
+        <p><b>Qualification :</b> --</p>
+        <p><b>Experience : </b>--</p>
+      </div>
+
+      <div class="faculty-card">
+        <img src="images/department-team/Teacher 1.jpeg" alt="S.M.Patil" class="faculty-img">
+        <h3><b>Sonali.M.Patil</b></h3>
+        <p><b>Assistant Professor</b></p>
+        <p> <b>Department : </b>Computer Science</p>
+        <p><b>Qualification : </b>M.Sc, NET, SET, DCA</p>
+        <p><b>Experience : </b>10 year</p>
+      </div>
+
+      <div class="faculty-card">
+        <img src="images/department-team/manoj-d-salve.png" alt="manoj-d-salve" class="faculty-img">
+        <h3><b>Manoj.D.Salve</b></h3>
+       <p><b>Assistant Professor</b></p>
+        <p> <b>Department : </b>Computer Science</p>
+        <p><b>Qualification : </b>M.Sc, B.Ed</p>
+        <p><b>Experience : </b>5 year</p>
+      </div>
+  
+      <div class="faculty-card">
+        <img src="images/department-team/Teacher 3.jpeg" alt="R.R.Chaudhari" class="faculty-img">
+        <h3>Rushika.R.Chaudhari</h3>
+        <p><b>Assistant Professor</b></p>
+        <p> <b>Department : </b>Computer Science</p>
+        <p><b>Qualification : </b>M.Sc</p>
+        <p><b>Experience : </b>2 year</p>
+      </div>
+      <div class="faculty-card">
+        <img src="images/department-team/Teacher 4.png" alt="N.T.Patil" class="faculty-img">
+        <h3><b>Neha.T.Patil</b></h3>
+        <p><b>Assistant Professor</b></p>
+        <p> <b>Department : </b>Computer Science</p>
+        <p><b>Qualification : </b>M.Sc, B.Ed</p>
+        <p><b>Experience : </b>2 year</p>
+      </div>
+
+      <div class="faculty-card">
+        <img src="images/department-team/Teacher 2.jpeg" alt="P.A.Mali" class="faculty-img">
+        <h3>Pallavi.A.Mali</h3>
+        <p><b>Assistant Professor</b></p>
+        <p> <b>Department : </b>Computer Science</p>
+        <p><b>Qualification : </b>MCA</p>
+        <p><b>Experience : </b>2 year</p>
       </div>
 
       <div class="faculty-card">
         <img src="images/department-team/Teacher 6.png" alt="S" class="faculty-img">
         <h3>Supriya.S.Patil</h3>
-        <p><b>Specialization : M.Sc Mathematics</b></p>
-        <p>Lecturer</p>
-        <p>Subject Taught: Mathematics</p>
+        <p><b>Assistant Professor</b></p>
+        <p> <b>Department : </b>Mathematics</p>
+        <p><b>Qualification : </b>--</p>
+        <p><b>Experience : </b>2 year</p>
       </div>
-    </div>
+
   </section>
 
   <footer class="footer">
