chenge the college name

--- a/contact.html
+++ b/contact.html
@@ -12,10 +12,12 @@
 
   <div class="header-top">
     <img src="images/logo.png" alt="College Logo" class="logo-left" />
-    <div class="header-texts">
-      <h2 class="college-name">Shahada Taluka Educational Society and Co-Op. Educational Society’s Ltd.</h2>
-      <h1 class="dept-title-left">B.Sc. Computer Science Department</h1>
+    
+     <div class="header-texts">
+      <h2 class="college-name">Shahada Taluka Educational Society and Co-Op. Educational Society’s Ltd. <br>Science Senior College, Shahada</h2>
+      <h1 class="dept-title-left">Department of Computer Science</h1>
     </div>
+    
     <div class="header-controls">
       <div id="date-time" class="date-time-3d">Loading time...</div>
     </div>
