--- a/department_team.html
+++ b/department_team.html
@@ -14,8 +14,8 @@
     <img src="images/logo.png" alt="College Logo" class="logo-left" />
 
     <div class="header-texts">
-      <h2 class="college-name">Shahada Taluka Educational Society and Co-Op. Educational Society’s Ltd.</h2>
-      <h1 class="dept-title-left">B.Sc. Computer Science Department</h1>
+      <h2 class="college-name">Shahada Taluka Educational Society and Co-Op. Educational Society’s Ltd. <br>Science Senior College, Shahada</h2>
+      <h1 class="dept-title-left">Department of Computer Science</h1>
     </div>
 
     <div class="header-controls">
