--- a/student-corner.html
+++ b/student-corner.html
@@ -1,54 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Student Corner</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
-<div class="header-top">
-  <img src="images/logo.png" alt="College Logo" class="logo-left" />
+  <div class="header-top">
+    <img src="images/logo.png" alt="College Logo" class="logo-left" />
 
-  <div class="header-texts">
-    <h2 class="college-name">Shahada Taluka Educational Society and Co-Op. Educational Society’s Ltd.</h2>
-    <h1 class="dept-title-left">B.Sc. Computer Science Department</h1>
+    <div class="header-texts">
+      <h2 class="college-name">Shahada Taluka Educational Society and Co-Op. Educational Society’s Ltd. <br>Science
+        Senior College, Shahada</h2>
+      <h1 class="dept-title-left">Department of Computer Science</h1>
+    </div>
+
+    <div class="header-controls">
+      <div id="date-time" class="date-time-3d">Loading time...</div>
+    </div>
   </div>
 
-  <div class="header-controls">
-    <div id="date-time" class="date-time-3d">Loading time...</div>
-  </div>
-</div>
+  <header class="navbar-section">
+    <nav class="nav">
+      <ul class="nav-list">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="courses.html">Courses</a></li>
+        <li><a href="department_team.html">Department Team</a></li>
 
-<header class="navbar-section">
-  <nav class="nav">
-    <ul class="nav-list">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="courses.html">Courses</a></li>
-      <li><a href="department_team.html">Department Team</a></li>
+        <li class="dropdown">
+          <a href="#" id="lab-toggle">Lab</a>
+          <ul class="dropdown-menu" id="lab-menu">
+            <li><a href="labs.html">Lab Information</a></li>
+            <li><a href="lab_gallery.html">Lab Gallery</a></li>
+          </ul>
+        </li>
 
-     <li class="dropdown">
-  <a href="#" id="lab-toggle">Lab</a>
-  <ul class="dropdown-menu" id="lab-menu">
-    <li><a href="labs.html">Lab Information</a></li>
-    <li><a href="lab_gallery.html">Lab Gallery</a></li>
-  </ul>
-</li>
+        <li class="dropdown">
+          <a href="#" id="downloads-toggle">Student</a>
+          <ul class="dropdown-menu" id="downloads-menu">
+            <li><a href="syllabus.html">Syllabus</a></li>
+            <li><a href="timetable.html">Timetable</a></li>
+            <li><a href="student-corner.html">Student Corner</a></li>
+          </ul>
+        </li>
 
-     <li class="dropdown">
-  <a href="#" id="downloads-toggle">Student</a>
-  <ul class="dropdown-menu" id="downloads-menu">
-    <li><a href="syllabus.html">Syllabus</a></li>
-    <li><a href="timetable.html">Timetable</a></li>
-    <li><a href="student-corner.html">Student Corner</a></li>
-  </ul>
-</li>
-
-      <li><a href="contact.html">Contact Us</a></li>
-    </ul>
-  </nav>
-</header>
+        <li><a href="contact.html">Contact Us</a></li>
+      </ul>
+    </nav>
+  </header>
 
   <h2 class="title">Student Corner</h2>
 
@@ -57,64 +60,74 @@
     <a href="https://nmu.ac.in/Student-Corner/Academics/Academic-Calendar" class="info-card">Academic Calendar</a>
     <a href="https://nmu.ac.in/Student-Corner/Academics/Admissions" class="info-card">Admissions</a>
     <a href="https://nmu.ac.in/Student-Corner/Examination/Exam-Time-Table" class="info-card">Exam Time Table</a>
-    <a href=" https://nmu.ac.in/Student-Corner/Examination/Online-Results-Colleges" class="info-card">Online Results (Colleges)</a>
-    <a href="https://nmujapp.digitaluniversity.ac/SearchDuplicateResult.aspx?ID=28176 " class="info-card">Online Result (Student)</a>
+    <a href=" https://nmu.ac.in/Student-Corner/Examination/Online-Results-Colleges" class="info-card">Online Results
+      (Colleges)</a>
+    <a href="https://nmujapp.digitaluniversity.ac/SearchDuplicateResult.aspx?ID=28176 " class="info-card">Online Result
+      (Student)</a>
     <a href=" https://nmuj.digitaluniversity.ac/studentlogin.aspx" class="info-card">Photocopy / Verification Form</a>
-    <a href="https://nmu.ac.in/Student-Corner/Examination/Verification-Redressal-Result " class="info-card">Verification Redressal Result</a>
+    <a href="https://nmu.ac.in/Student-Corner/Examination/Verification-Redressal-Result " class="info-card">Verification
+      Redressal Result</a>
     <a href=" https://nmu.ac.in/Student-Corner/Examination/Exam-Reports" class="info-card">Exam Reports</a>
-    <a href="https://nmu.ac.in/Student-Corner/Examination/Online-Degree-Verification " class="info-card">Online Degree Verification</a>
+    <a href="https://nmu.ac.in/Student-Corner/Examination/Online-Degree-Verification " class="info-card">Online Degree
+      Verification</a>
     <a href=" https://nmu.ac.in/Student-Corner/Examination/Question-Bank" class="info-card">Question Bank</a>
-    <a href=" https://nmuj.digitaluniversity.ac/QPCourseSelection.aspx?ID=660" class="info-card">Previous Question Papers</a>
+    <a href=" https://nmuj.digitaluniversity.ac/QPCourseSelection.aspx?ID=660" class="info-card">Previous Question
+      Papers</a>
     <a href="https://nmuj.digitaluniversity.ac/QPCourseSelection.aspx?ID=660 " class="info-card">Paper Code List</a>
-    <a href=" https://docs.google.com/forms/d/e/1FAIpQLSdaX-PjS-CAUADHwRs6X_b9TeHGdgsHseTOhFrCReM5ED0OuQ/viewform" class="info-card">Copy Case Student Entry</a>
+    <a href=" https://docs.google.com/forms/d/e/1FAIpQLSdaX-PjS-CAUADHwRs6X_b9TeHGdgsHseTOhFrCReM5ED0OuQ/viewform"
+      class="info-card">Copy Case Student Entry</a>
   </div>
 
-<footer class="footer">
-  <div class="footer-container">
+  <footer class="footer">
+    <div class="footer-container">
 
-    <div class="footer-column">
-      <h3>About</h3>
-      <p>
-        According to rule of NMU Jalgoan the college has started from 10th July 2001 from accademic year 2001-2002, with computer science and from the academic year 2004-2005 we have enhanced our tries and got the success to start the latest and most useful field - Biotechnology
-      </p>
+      <div class="footer-column">
+        <h3>About</h3>
+        <p>
+          According to rule of NMU Jalgoan the college has started from 10th July 2001 from accademic year 2001-2002,
+          with computer science and from the academic year 2004-2005 we have enhanced our tries and got the success to
+          start the latest and most useful field - Biotechnology
+        </p>
+      </div>
+
+      <div class="footer-column">
+        <h3>Contact Us</h3>
+        <p>
+          Science Sr. College, Shahada<br>
+          Dist. Nandurbar, Maharashtra<br>
+          Email: info@stcollege.aDr. Vishram Kaka educational campus science sr. college shahada
+          Dist. Nandurbar, Maharashtra 425409
+          +91 8788356600
+          02565- 223122
+          stcopscience@gmail.comc.in<br>
+          Phone: +91-1234567890
+        </p>
+      </div>
+
+      <div class="footer-column">
+        <h3>Quick Links</h3>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Courses</a></li>
+          <li><a href="#">Faculty</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+
     </div>
 
-    <div class="footer-column">
-      <h3>Contact Us</h3>
-      <p>
-        Science Sr. College, Shahada<br>
-        Dist. Nandurbar, Maharashtra<br>
-        Email: info@stcollege.aDr. Vishram Kaka educational campus science sr. college shahada
-Dist. Nandurbar, Maharashtra 425409
-+91 8788356600
-02565- 223122
-stcopscience@gmail.comc.in<br>
-        Phone: +91-1234567890
-      </p>
+    <div class="footer-bottom">
+      <p>&copy; 2025 B.Sc. Computer Science Department.[ Create by Premkumar Patil ❤ ]</p>
     </div>
-
-    <div class="footer-column">
-      <h3>Quick Links</h3>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Courses</a></li>
-        <li><a href="#">Faculty</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </div>
-
-  </div>
-
-  <div class="footer-bottom">
-    <p>&copy; 2025 B.Sc. Computer Science Department.[ Create by Premkumar Patil ❤ ]</p>
-  </div>
-</footer>
+  </footer>
 
 
   <script src="script.js"></script>
 </body>
+
 </html>
 
 
 </body>
+
 </html>
