--- a/syllabus.html
+++ b/syllabus.html
@@ -14,9 +14,9 @@
   <img src="images/logo.png" alt="College Logo" class="logo-left" />
 
   <div class="header-texts">
-    <h2 class="college-name">Shahada Taluka Educational Society and Co-Op. Educational Society’s Ltd.</h2>
-    <h1 class="dept-title-left">B.Sc. Computer Science Department</h1>
-  </div>
+      <h2 class="college-name">Shahada Taluka Educational Society and Co-Op. Educational Society’s Ltd. <br>Science Senior College, Shahada</h2>
+      <h1 class="dept-title-left">Department of Computer Science</h1>
+    </div>
 
   <div class="header-controls">
     <div id="date-time" class="date-time-3d">Loading time...</div>
