--- a/department_team.html
+++ b/department_team.html
@@ -64,7 +64,7 @@
         <p><b><u>Vice Principal & HOD</u></b></p>
         <p><b>Department : </b> Electronics</p>
         <p><b>Qualification :</b> Analog and Digital Electronics, Communication, Material Science</p>
-        <p><b>Experience :</b> ---</p>
+        <p><b>Experience :</b> 8 years</p>
       </div>
 
       <div class="faculty-card">
@@ -90,8 +90,8 @@
         <h3><b>Yugandhara.D.Patil</b></h3>
         <p><b>HOD</b></p>
         <p><b>Department :</b> Mathematics</p>
-        <p><b>Qualification :</b> --</p>
-        <p><b>Experience : </b>--</p>
+        <p><b>Qualification :</b> M.Sc, B.Ed</p>
+        <p><b>Experience : </b>8 years</p>
       </div>
 
       <div class="faculty-card">
