update code and add img

--- a/department_team.html
+++ b/department_team.html
@@ -72,17 +72,17 @@
         <h3><b>Anis.M.Kureshi</b></h3>
         <p><b>HOD</b></p>
         <p><b>Department : </b>Computer Science</p>
-        <p> <b>Qualification : </b>M.Sc,SET,N,Phil., Ph.D (appert)</p>
+        <p> <b>Qualification : </b>M.Sc, SET,M.phil., Ph.D (appert)</p>
         <p><b>Experience :</b> 14 year</p>
       </div>
 
       <div class="faculty-card">
-        <img src="images/hod.jpg" alt="----" class="faculty-img">
-        <h3><b>----</b></h3>
+        <img src="images/department-team/sayyed.jpg" alt="m.s" class="faculty-img">
+        <h3><b>Muddassar..Sayyed</b></h3>
         <p><b><u>HOD</u></b></p>
         <p><b>Department :</b> Physics</p>
-        <p><b>Qualification :</b> --</p>
-        <p><b>Experience : </b>--</p>
+        <p><b>Qualification :</b> M.Sc Physics (With Energy studies), B.Ed</p>
+        <p><b>Experience : </b>15 years</p>
       </div>
 
       <div class="faculty-card">
@@ -143,8 +143,8 @@
         <h3>Supriya.S.Patil</h3>
         <p><b>Assistant Professor</b></p>
         <p> <b>Department : </b>Mathematics</p>
-        <p><b>Qualification : </b>--</p>
-        <p><b>Experience : </b>2 year</p>
+        <p><b>Qualification : </b>M.Sc</p>
+        <p><b>Experience : </b>1 year</p>
       </div>
 
   </section>
