--- a/department_team.html
+++ b/department_team.html
@@ -78,7 +78,7 @@
 
       <div class="faculty-card">
         <img src="images/department-team/sayyed.jpg" alt="m.s" class="faculty-img">
-        <h3><b>Muddassar..Sayyed</b></h3>
+        <h3><b>Muddassar.M.Sayyad</b></h3>
         <p><b><u>HOD</u></b></p>
         <p><b>Department :</b> Physics</p>
         <p><b>Qualification :</b> M.Sc Physics (With Energy studies), B.Ed</p>
