--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,7 @@
             <li><a href="syllabus.html">Syllabus</a></li>
             <li><a href="timetable.html">Timetable</a></li>
             <li><a href="student-corner.html">Student Corner</a></li>
+             <li><a href="https://cims.mastersofterp.in/">Online Admission</a></li>
           </ul>
         </li>
         <li><a href="contact.html">Contact Us</a></li>
