--- a/labs.html
+++ b/labs.html
@@ -44,6 +44,7 @@
             <li><a href="syllabus.html">Syllabus</a></li>
             <li><a href="timetable.html">Timetable</a></li>
             <li><a href="student-corner.html">Student Corner</a></li>
+            <li><a href="https://cims.mastersofterp.in/">Online Admission</a></li>
           </ul>
         </li>
 
