--- a/lab_gallery.html
+++ b/lab_gallery.html
@@ -58,7 +58,7 @@
     <h2 class="section-title">Virtual Tour of Our Computer Lab</h2>
     <div class="video-container">
       <video controls>
-        <source src="images/Lab Gallery/lab-video.mp4" />
+        <source src="images/Lab Gallery/vedio-lab.mp4" />
         Your browser does not support the video tag.
       </video>
     </div>
