--- a/department_team.html
+++ b/department_team.html
@@ -73,7 +73,7 @@
         <h3><b>Anis.M.Kureshi</b></h3>
         <p><b>HOD</b></p>
         <p><b>Department : </b>Computer Science</p>
-        <p> <b>Qualification : </b>M.Sc, SET,M.phil., Ph.D (appert)</p>
+        <p> <b>Qualification : </b>M.Sc, SET,M.phil., Ph.D (appear)</p>
         <p><b>Experience :</b> 14 year</p>
       </div>
 
